--- a/package.json
+++ b/package.json
@@ -24,5 +24,8 @@
   "homepage": "https://github.com/electron/electron-quick-start#readme",
   "devDependencies": {
     "electron": "^2.0.7"
+  },
+  "dependencies": {
+    "node-firebird": "^0.8.6"
   }
 }
