--- a/bower.json
+++ b/bower.json
@@ -22,6 +22,7 @@
   ],
   "dependencies": {
     "angular-material": "^1.1.1",
-    "angular-route": "^1.5.8"
+    "angular-route": "^1.5.8",
+    "angular-material-data-table": "^0.10.10"
   }
 }
