--- a/bower.json
+++ b/bower.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "angular-material": "^1.1.1",
     "angular-route": "^1.5.8",
-    "angular-material-data-table": "^0.10.10"
+    "angular-material-data-table": "^0.10.10",
+    "angular-fixed-table-header": "^0.2.1"
   }
 }
