--- a/bower.json
+++ b/bower.json
@@ -24,6 +24,7 @@
     "angular-material": "^1.1.1",
     "angular-route": "^1.5.8",
     "angular-material-data-table": "^0.10.10",
-    "angular-fixed-table-header": "^0.2.1"
+    "angular-fixed-table-header": "^0.2.1",
+    "fixed-table-header": "^0.0.3"
   }
 }
